# kanen-backend

./: .env.example  .gitignore  Procfile  README.md  alembic.ini  pyproject.toml  railway.toml
app/: main.py
app/api/: deps.py  routes.py  sentiment_routes.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py
app/parsers/: receipt_parser.py
app/services/: analytics.py  gmail_client.py  quickbooks_client.py
app/workers/: gmail_ingest.py  quickbooks_sync.py  sync_runner.py
migrations/: env.py
tests/: test_api.py
